--- a/FrontEnd/coded/package.json
+++ b/FrontEnd/coded/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-loader-spinner": "^5.3.4",
     "react-masonry-component": "^6.3.0",
     "react-modal": "^3.16.1",
