--- a/BackEnd/Coded/pom.xml
+++ b/BackEnd/Coded/pom.xml
@@ -119,6 +119,14 @@
 		    <version>3.1.0</version>
 		</dependency>
 
+		<!-- 썸네일 생성 -->
+		<dependency>
+			<groupId>net.coobird</groupId>
+			<artifactId>thumbnailator</artifactId>
+			<version>0.4.20</version>
+		</dependency>
+
+
 		
 	</dependencies>
 
